--- a/providers/4_content/mustache/templates/controller.mustache
+++ b/providers/4_content/mustache/templates/controller.mustache
@@ -51,5 +51,21 @@ module.exports = (ctx) => {
       return res.send(error);
     }
   };
-  return { index, create, show, update, destroy };
+
+   const query = async (req, res) => {
+    const query = req.body;
+    try {
+      const {{variable}} = await {{model}}.find()
+        .field(query)
+        .keyword(query)
+        .filter(query)
+        .order(query)
+        .page(query);
+      return res.send({{variable}});
+    } catch (error) {
+      return res.send(error);
+    }
+  };
+
+  return { index, create, show, update, destroy, query };
 };
