--- a/views/index.edge
+++ b/views/index.edge
@@ -21,7 +21,13 @@
     <link href="/css/sb-admin-2.min.css" rel="stylesheet">
 
     {{--  vue js  --}}
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+    <script  src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+
+    <style>
+        .pointer{
+            cursor: pointer;
+        }
+    </style>
 
 </head>
 
@@ -56,7 +62,7 @@
             <!-- End of Main Content -->
 
             {{--  Footer  --}}
-           @include('partials/footer')
+           {{--  @include('partials/footer')  --}}
 
         </div>
         <!-- End of Content Wrapper -->
@@ -69,26 +75,6 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Bootstrap core JavaScript-->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -99,6 +85,7 @@
     <!-- Custom scripts for all pages-->
     <script src="/js/sb-admin-2.min.js"></script>
 
+    @!section('script')
 </body>
 
 </html>
