--- a/providers/admin/admin.edge
+++ b/providers/admin/admin.edge
@@ -1,1 +1,14 @@
-<iframe src="http://localhost:1708/admin-bro/resources/Admin" height="100vh" width="100%"></iframe>
+<div style="height: 100vh">
+    <iframe src="http://localhost:1708/admin-bro/" height="100%" width="100%" frameBorder="0" onload="onLoadHandler();" id="adminBroFrame" style="display: none"></iframe>
+</div>
+
+<script>
+    function onLoadHandler() {
+        const iframe = document.getElementById("adminBroFrame")
+        const sections = iframe.contentWindow.document.getElementsByTagName("section")
+        sections[1].remove()
+        sections[2].remove()
+        sections[3].style = "padding:0px"
+        iframe.style = "display: block"
+    }
+</script>
