--- a/views/components/page-header.edge
+++ b/views/components/page-header.edge
@@ -1,5 +1,5 @@
   <!-- Page Heading -->
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
+<div class="d-sm-flex align-items-center justify-content-between">
     <h1 class="h3 mb-0 text-gray-800">{{heading}}
       @if(subHeading)
        <span class="h5 text-muted text-capitalize"> / {{subHeading}}</span>
