--- a/views/partials/sidebar.edge
+++ b/views/partials/sidebar.edge
@@ -2,7 +2,7 @@
       <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand text-right" href="/admin">
+        <a class="sidebar-brand text-center" href="/admin">
             <div class="sidebar-brand-icon">
                 <img src="/img/menjs-logo.png" width="30" height="30" />
             </div>
