--- a/views/partials/header.edge
+++ b/views/partials/header.edge
@@ -2,10 +2,14 @@
    <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
     <!-- Sidebar Toggle (Topbar) -->
-    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+    <button id="sidebarToggleTop" class="btn btn-link rounded-circle mr-3">
         <i class="fa fa-bars"></i>
     </button>
 
+    @!component('components/page-header', {
+        heading:"Provider",
+        subHeading: provider
+    })
 
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
