--- a/providers/content/content.edge
+++ b/providers/content/content.edge
@@ -53,8 +53,10 @@
                             <span class="mx-2"></span> 
                             @{{name}}    
                           </div> 
-                          <div class="col-4 text-center">
+                          <div class="col-4 d-flex justify-content-between">
                               @{{value.type}}
+                              <span v-if="value.relationship" class="text-primary font-weight-bold" style="font-size:12px" >@{{value.relationship}} - @{{value.ref}}</span>
+                              <span v-if="value.enum && value.enum.length > 0" class="text-primary font-weight-bold" style="font-size:12px" > Enum  @{{value.enum.length}} options </span>
                           </div>
                           <div class="col-4 text-right">
                             <i class="fas fa-pencil-alt" style="cursor:pointer" @click="editCollectionType(name,value.type)"></i>
@@ -123,14 +125,16 @@
                         </div>   
                         <div class="col-6">
                             <label>Select a field for your collection type</label>
-                            <select class="form-control" v-model="newCollectionType.type" >
-                              <option>String</option>
-                              <option>Number</option>
-                              <option>Boolean</option>
-                              <option>Ref</option>
-                            </select>
+                            <div>
+
+                                <span class="badge pointer" :class="{'badge-success': newCollectionType.type === 'String'}" @click="newCollectionType.type='String'">String</span>
+                                <span class="badge pointer" :class="{'badge-success': newCollectionType.type === 'Number'}" @click="newCollectionType.type='Number'">Number</span>
+                                <span class="badge pointer" :class="{'badge-success': newCollectionType.type === 'Boolean'}" @click="newCollectionType.type='Boolean'">Boolean</span>
+                                <span class="badge pointer" :class="{'badge-success': newCollectionType.type === 'Ref'}" @click="newCollectionType.type='Ref'">Ref</span>
+                                <span class="badge pointer" :class="{'badge-success': newCollectionType.type === 'Enum'}" @click="newCollectionType.type='Enum'">Enum</span>
+
+                            </div>
                         </div>
-                                  
                     </div>
                     <div class="row" v-if="newCollectionType.type=== 'Ref'">
                         <div class="col-6">
@@ -146,6 +150,26 @@
                             <select class="form-control" v-model="newCollectionType.ref" >
                               <option v-for="collection in collectionList">@{{collection}}</option>             
                             </select>
+                        </div>
+                    </div>
+                    <div class="row" v-if="newCollectionType.type=== 'Enum'">
+                        <div class="col-6">
+                            <label>Define Enum</label>
+                            <div>
+                                <div class="input-group mb-3">
+                                    <input v-model="newCollectionType.enum.name" type="text" class="form-control" placeholder="Enum Value" aria-label="Enum Value">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-primary" @click="newCollectionType.enum.created.push(newCollectionType.enum.name);newCollectionType.enum.name=''" >Add</button>
+                                    </div>
+                                </div>  
+                            </div>
+
+                        </div>
+                        <div class="col-6">
+                            <label>Enums Created</label>
+                            <div>
+                                <span v-for="created in newCollectionType.enum.created" class="badge badge-primary text-capitalize h4 p-2 mx-1">@{{created}}</span>    
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -207,7 +231,11 @@
                  type:"String",
                  name:"",
                  relationship:undefined,
-                 ref:undefined
+                 ref:undefined,
+                 enum:{
+                     name:"",
+                     created:[]
+                 }
              },
              editMode:false,
              saveLoading:false
@@ -274,16 +302,26 @@
                  })
                  .catch(error => console.log('error', error));
              },
+             _setCollectionSchema(type){
+                Vue.set(this.selectedCollection.schema,this.newCollectionType.name,type)
+                this.newCollectionType.name = ""
+                 this.newCollectionType.type = "String"
+             },
              createNewCollectionType(){
                  this.editMode = true;
-                 if(this.newCollectionType.relationship){
-                     let type = {type:"ref",ref:this.newCollectionType.ref,relationship:this.newCollectionType.relationship}
-                     Vue.set(this.selectedCollection.schema,this.newCollectionType.name,type)
-                 }else{     
-                     Vue.set(this.selectedCollection.schema,this.newCollectionType.name,{type:this.newCollectionType.type})
+                 let type = {};
+
+                 switch(this.newCollectionType.type){
+                     case "Ref"  :  type = {type:"ref",ref:this.newCollectionType.ref,relationship:this.newCollectionType.relationship}
+                                    this._setCollectionSchema(type) 
+                                    break;   
+                     case "Enum" :  type = {type:"String",enum:this.newCollectionType.enum.created};
+                                    this._setCollectionSchema(type) 
+                                    break;
+                     default     :  this._setCollectionSchema({type:this.newCollectionType.type})
+                                    break;                                              
                  }
-                 this.newCollectionType.name = ""
-                 this.newCollectionType.type = "String"
+          
              },
              mutateCollection(){
                  this.saveLoading = true
